fix(core): fix alignment on cards in card choices (#7158)

--- a/app/scripts/modules/core/src/modal/modals.less
+++ b/app/scripts/modules/core/src/modal/modals.less
@@ -334,8 +334,6 @@ abbr.select2-search-choice-close {
     margin: 15px;
     padding: 30px 15px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
     &.active {
       border: 1px solid var(--color-accent);
       background-color: var(--color-accent-g2);
